pendente exceções